Post edit: avoid title overflow for long article name
Bug: T307637

--- a/modules/utils/mixins.less
+++ b/modules/utils/mixins.less
@@ -54,6 +54,12 @@
 	.rel-line-height( @targetFontSize, @targetLineHeight );
 }
 
+.text-ellipsis() {
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
+
 .paragraph-ellipsis( @lines: 2, @parentFontSize, @targetFontSize, @targetLineHeight ) {
 	overflow: hidden;
 	// Show @lines lines of text, with an ellipsis.
